--- a/level32/Classwork/Classwork.html
+++ b/level32/Classwork/Classwork.html
@@ -1,8 +1,1 @@
-<html>
-    <head>
-        <title>Hello Git</title>
-    </head>
-    <body>
-        <h1>Hello Git</h1>      
-    </body>
-</html>
+<!-- Git day -->
